@@ -22,6 +22,7 @@ Contributors:
 	Doug Springer
 	Brett Hagman <bhagman@roguerobotics.com>
 	Rene Liebscher <r.liebscher@gmx.de>
+	Jim Paris <jim@jtan.com>
 
 For minor contributions, please see the ChangeLog files.
 
